[package]
name = "async-fs"
version = "1.3.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2018"
description = "Async filesystem primitives"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/stjepang/async-fs"
homepage = "https://github.com/stjepang/async-fs"
documentation = "https://docs.rs/async-fs"
keywords = ["asynchronous", "file", "filesystem", "io"]
categories = ["asynchronous", "concurrency"]
readme = "README.md"

[dependencies]
blocking = "1.0.0"
futures-lite = "1.2.0"
