[package]
name = "async-fs"
# When publishing a new version:
# - Update CHANGELOG.md
# - Create "v2.x.y" git tag
version = "2.2.0"
authors = ["Stjepan Glavina <stjepang@gmail.com>"]
edition = "2021"
rust-version = "1.71"
description = "Async filesystem primitives"
license = "Apache-2.0 OR MIT"
repository = "https://github.com/smol-rs/async-fs"
homepage = "https://github.com/smol-rs/async-fs"
documentation = "https://docs.rs/async-fs"
keywords = ["asynchronous", "file", "filesystem", "io"]
categories = ["asynchronous", "concurrency"]
exclude = ["/.*"]

[dependencies]
async-lock = "3.0.0"
blocking = "1.3.0"
futures-lite = "2.0.0"

[target.'cfg(unix)'.dev-dependencies]
libc = "0.2.78"

[target.'cfg(windows)'.dev-dependencies.windows-sys]
version = "0.61"
features = [
    "Win32_Storage_FileSystem",
]
